--- a/vistortrack/pubspec.yaml
+++ b/vistortrack/pubspec.yaml
@@ -39,6 +39,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/
+    
   fonts:
     - family: Calypsoka
       fonts:
