--- a/vistortrack/pubspec.yaml
+++ b/vistortrack/pubspec.yaml
@@ -19,14 +19,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  curved_navigation_bar: ^0.3.1
+  url_launcher: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
 
 # For information on the generic Dart part of this file, see the
