--- a/vistortrack/vistortrack/pubspec.yaml
+++ b/vistortrack/vistortrack/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   curved_navigation_bar: ^0.3.1
   url_launcher: ^3.0.0
+  http: ^0.12.0+2
+  flutter_local_notifications:
 
 dev_dependencies:
   flutter_test:
